# 3panel

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  README.md  UPGRADE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml  docker-publish.yml  frontend-ci.yml
app/: __init__.py
app/api/: __init__.py  deps.py  main.py
app/bot/: __init__.py  admin_notify.py  formatters.py  keyboards.py  main.py  router.py  states.py
app/cli/: __init__.py  main.py
app/core/: __init__.py  config.py  crypto.py  enums.py  exceptions.py  logging.py  permissions.py  security.py
app/db/: __init__.py  base.py  session.py
app/schemas/: __init__.py  auth.py  clients.py  commerce.py  payments.py  servers.py  system.py  tariffs.py
app/services/: __init__.py  app_settings.py  audit.py  bot_facades.py  diagnostics.py  orders.py  payments.py  provisioning.py  qrcode.py  server_selection.py  subscriptions.py  tariffs.py  telegram.py  telegram_stars.py  trial.py  users.py
app/workers/: __init__.py  celery_app.py  scheduler.py
frontend/: index.html  nginx-spa.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  styles.css
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/nginx/: nginx.conf
scripts/: admin_update.sh  backup_db.sh  install.sh  restore_db.sh  update.sh
tests/: test_auth_api.py  test_cli_diagnostics.py  test_commerce_flow.py  test_health.py  test_security.py  test_xui_provider.py
(+77 files in other folders)
