[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vpnbotx"
version = "0.1.0"
description = "Telegram VPN sales bot and admin panel for 3X-UI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "VPNBotX contributors" }]
dependencies = [
  "aiogram>=3.20,<4",
  "alembic>=1.16,<2",
  "argon2-cffi>=25.1,<26",
  "asyncpg>=0.30,<1",
  "celery[redis]>=5.5,<6",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.9,<3",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "redis>=6.1,<7",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25.3,<26",
  "typer>=0.16,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.16,<2",
  "pre-commit>=4.2,<5",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.11,<1",
]

[project.scripts]
vpnbotx = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
